--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@
 /buscaPar.xsl -text
 dev/cross-model-en-es-it.xml -text
 dev/cross.xml -text
+dev/patterns-not-detected.xml -text
 /modes.xml -text
 /principal.xsl -text
 /translate-to-default-equivalent.xsl -text
