--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 /AUTHORS -text
+/ChangeLog -text
 /Makefile.am -text
 /NEWS -text
 /README -text
@@ -13,15 +14,20 @@
 /apertium-en-it.it-en.t1x -text
 /apertium-en-it.it-en.t2x -text
 /apertium-en-it.it-en.t3x -text
+/apertium-en-it.it.acx -text
 /apertium-en-it.it.dix -text
 /apertium-en-it.it.tsx -text
 /apertium-en-it.post-en.dix -text
 /apertium-en-it.post-it.dix -text
 /autogen.sh -text
 /buscaPar.xsl -text
+/configure.ac -text
 dev/cross-model-en-es-it.xml -text
 dev/cross.xml -text
 dev/patterns-not-detected.xml -text
+/en-es-unsupervised.make -text
+/en-es.prob -text svneol=unset#unset
+/it-en.prob -text svneol=unset#unset
 /modes.xml -text
 /principal.xsl -text
 /translate-to-default-equivalent.xsl -text
