--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 VERSION=0.6.0
 LANG1=en
-LANG2=es
+LANG2=it
 PREFIX1=$(LANG1)-$(LANG2)
 PREFIX2=$(LANG2)-$(LANG1)
 
@@ -8,12 +8,12 @@ BASENAME=apertium-$(PREFIX1)
 
 TARGETS_COMMON = $(PREFIX1).automorf.bin $(PREFIX1).autobil.bin $(PREFIX1).autogen.bin \
                  $(PREFIX1).autopgen.bin $(PREFIX2).automorf.bin $(PREFIX2).autobil.bin \
-                 $(PREFIX2).autogen.bin $(PREFIX2).autopgen.bin $(PREFIX1).lextormono.bin $(PREFIX2).lextormono.bin \
-                 $(PREFIX1).lextorbil.bin $(PREFIX2).lextorbil.bin \
+                 $(PREFIX2).autogen.bin $(PREFIX2).autopgen.bin #$(PREFIX1).lextormono.bin $(PREFIX2).lextormono.bin \
+#                 $(PREFIX1).lextorbil.bin $(PREFIX2).lextorbil.bin \
                  $(PREFIX1).t1x.bin $(PREFIX1).t2x.bin $(PREFIX1).t3x.bin \
-                 $(PREFIX2).t1x.bin $(PREFIX2).t2x.bin $(PREFIX2).t3x.bin modes \
-		 $(BASENAME).$(LANG1)-lextor.dix $(BASENAME).$(LANG2)-lextor.dix \
-		 $(BASENAME).$(PREFIX1)-lextor.dix $(BASENAME).$(PREFIX2)-lextor.dix
+                 $(PREFIX2).t1x.bin $(PREFIX2).t2x.bin $(PREFIX2).t3x.bin modes #\
+#		 $(BASENAME).$(LANG1)-lextor.dix $(BASENAME).$(LANG2)-lextor.dix \
+#		 $(BASENAME).$(PREFIX1)-lextor.dix $(BASENAME).$(PREFIX2)-lextor.dix
 
 
 
@@ -21,21 +21,21 @@ TARGETS_COMMON = $(PREFIX1).automorf.bin $(PREFIX1).autobil.bin $(PREFIX1).autog
 TARGETS = $(TARGETS_COMMON) 
 
 
-$(BASENAME).$(LANG1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-	apertium-gen-lextormono rl $(BASENAME).$(PREFIX1).dix $@
-
-$(BASENAME).$(LANG2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-	apertium-gen-lextormono lr $(BASENAME).$(PREFIX1).dix $@
-
-$(BASENAME).$(PREFIX1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-	apertium-gen-lextorbil rl $(BASENAME).$(PREFIX1).dix $@
-
-$(BASENAME).$(PREFIX2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-	apertium-gen-lextorbil lr $(BASENAME).$(PREFIX1).dix $@
+#$(BASENAME).$(LANG1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+#	apertium-gen-lextormono rl $(BASENAME).$(PREFIX1).dix $@
+#
+#$(BASENAME).$(LANG2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+#	apertium-gen-lextormono lr $(BASENAME).$(PREFIX1).dix $@
+#
+#$(BASENAME).$(PREFIX1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+#	apertium-gen-lextorbil rl $(BASENAME).$(PREFIX1).dix $@
+#
+#$(BASENAME).$(PREFIX2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+#	apertium-gen-lextorbil lr $(BASENAME).$(PREFIX1).dix $@
 
 
 $(PREFIX1).automorf.bin: $(BASENAME).$(LANG1).metadix $(BASENAME).$(LANG1).acx
@@ -62,8 +62,8 @@ $(PREFIX1).autopgen.bin: $(BASENAME).post-$(LANG2).dix
 	apertium-validate-dictionary $(BASENAME).post-$(LANG2).dix
 	lt-comp lr $(BASENAME).post-$(LANG2).dix $@
 
-$(PREFIX2).automorf.bin: $(BASENAME).$(LANG2).dix $(BASENAME).$(LANG2).acx
-	apertium-validate-acx $(BASENAME).$(LANG2).acx
+$(PREFIX2).automorf.bin: $(BASENAME).$(LANG2).dix #$(BASENAME).$(LANG2).acx
+#	apertium-validate-acx $(BASENAME).$(LANG2).acx
 	apertium-validate-dictionary $(BASENAME).$(LANG2).dix
 	lt-comp lr $(BASENAME).$(LANG2).dix $@ $(BASENAME).$(LANG2).acx
 #	@rm $(BASENAME).$(LANG2).dix
