--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /Makefile.am -text
 /NEWS -text
 /README -text
+/alt.xsl -text
 /apertium-en-it.en-it.dix -text
 /apertium-en-it.en-it.t1x -text
 /apertium-en-it.en-it.t2x -text
