--- a/Makefile.am
+++ b/Makefile.am
@@ -1,48 +1,73 @@
 VERSION=0.6.0
 LANG1=en
+LANG1a=en_GB
+LANG1b=en_US
 LANG2=it
 PREFIX1=$(LANG1)-$(LANG2)
 PREFIX2=$(LANG2)-$(LANG1)
+PREFIX2b=$(LANG2)-$(LANG1b)
 
 BASENAME=apertium-$(PREFIX1)
 
 TARGETS_COMMON = $(PREFIX1).automorf.bin $(PREFIX1).autobil.bin $(PREFIX1).autogen.bin \
                  $(PREFIX1).autopgen.bin $(PREFIX2).automorf.bin $(PREFIX2).autobil.bin \
-                 $(PREFIX2).autogen.bin $(PREFIX2).autopgen.bin \
+                 $(PREFIX2).autogen.bin $(PREFIX2).autopgen.bin $(PREFIX1).lextormono.bin $(PREFIX2).lextormono.bin \
+                 $(PREFIX2b).autogen.bin \
+                 $(PREFIX1).lextorbil.bin $(PREFIX2).lextorbil.bin \
                  $(PREFIX1).t1x.bin $(PREFIX1).t2x.bin $(PREFIX1).t3x.bin \
-                 $(PREFIX2).t1x.bin $(PREFIX2).t2x.bin $(PREFIX2).t3x.bin modes 
-
-
+                 $(PREFIX2).t1x.bin $(PREFIX2).t2x.bin $(PREFIX2).t3x.bin modes \
+		 $(BASENAME).$(LANG1)-lextor.dix $(BASENAME).$(LANG2)-lextor.dix \
+		 $(BASENAME).$(PREFIX1)-lextor.dix $(BASENAME).$(PREFIX2)-lextor.dix
 
 
 TARGETS = $(TARGETS_COMMON) 
 
 
-#$(BASENAME).$(LANG1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-#	apertium-gen-lextormono rl $(BASENAME).$(PREFIX1).dix $@
-#
-#$(BASENAME).$(LANG2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-#	apertium-gen-lextormono lr $(BASENAME).$(PREFIX1).dix $@
-#
-#$(BASENAME).$(PREFIX1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-#	apertium-gen-lextorbil rl $(BASENAME).$(PREFIX1).dix $@
-#
-#$(BASENAME).$(PREFIX2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
-#	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
-#	apertium-gen-lextorbil lr $(BASENAME).$(PREFIX1).dix $@
+$(BASENAME).$(LANG1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+	apertium-gen-lextormono rl $(BASENAME).$(PREFIX1).dix $@
 
+$(BASENAME).$(LANG2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+	apertium-gen-lextormono lr $(BASENAME).$(PREFIX1).dix $@
 
-$(PREFIX1).automorf.bin: $(BASENAME).$(LANG1).metadix $(BASENAME).$(LANG1).acx
-	@xsltproc buscaPar.xsl apertium-en-it.en.metadix | uniq > tmp1gen.xsl 	 
-	@xsltproc tmp1gen.xsl apertium-en-it.en.metadix >$(BASENAME).$(LANG1).dixtmp1 
-	@rm tmp1gen.xsl
+$(BASENAME).$(PREFIX1)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+	apertium-gen-lextorbil rl $(BASENAME).$(PREFIX1).dix $@
+
+$(BASENAME).$(PREFIX2)-lextor.dix: $(BASENAME).$(PREFIX1).dix
+	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
+	apertium-gen-lextorbil lr $(BASENAME).$(PREFIX1).dix $@
+
+.deps/$(LANG1).metadix: $(BASENAME).$(LANG1).metadix
+	if [ ! -d .deps ]; then mkdir .deps; fi
+	xsltproc --stringparam alt $(LANG1a) alt.xsl $(BASENAME).$(LANG1).metadix >$@
+
+.deps/$(LANG1).dix: .deps/$(LANG1).metadix
+	xsltproc buscaPar.xsl .deps/$(LANG1).metadix | uniq >$$$$tmp1 && \
+	xsltproc $$$$tmp1 .deps/$(LANG1).metadix > $@ && rm $$$$tmp1
+
+.deps/$(LANG1b).metadix: $(BASENAME).$(LANG1).metadix
+	if [ ! -d .deps ]; then mkdir .deps; fi
+	xsltproc --stringparam alt $(LANG1b) alt.xsl $(BASENAME).$(LANG1).metadix >$@
+
+.deps/$(LANG1b).dix: .deps/$(LANG1b).metadix
+	xsltproc buscaPar.xsl .deps/$(LANG1b).metadix | uniq >$$$$tmp1 && \
+	xsltproc $$$$tmp1 .deps/$(LANG1b).metadix > $@ && rm $$$$tmp1
+
+$(PREFIX1).automorf.bin: .deps/$(LANG1).dix
+	apertium-validate-dictionary .deps/$(LANG1).dix
 	apertium-validate-acx $(BASENAME).$(LANG1).acx
-	apertium-validate-dictionary $(BASENAME).$(LANG1).dixtmp1
-	lt-comp lr $(BASENAME).$(LANG1).dixtmp1 $@ $(BASENAME).$(LANG1).acx
-#	@rm $(BASENAME).$(LANG1).dixtmp1
+	lt-comp lr .deps/$(LANG1).dix $@ $(BASENAME).$(LANG1).acx
+
+#$(PREFIX1).automorf.bin: $(BASENAME).$(LANG1).metadix $(BASENAME).$(LANG1).acx
+#	@xsltproc buscaPar.xsl apertium-en-es.en.metadix | uniq > tmp1gen.xsl 	 
+#	@xsltproc tmp1gen.xsl apertium-en-es.en.metadix >$(BASENAME).$(LANG1).dixtmp1 
+#	@rm tmp1gen.xsl
+#	apertium-validate-acx $(BASENAME).$(LANG1).acx
+#	apertium-validate-dictionary $(BASENAME).$(LANG1).dixtmp1
+#	lt-comp lr $(BASENAME).$(LANG1).dixtmp1 $@ $(BASENAME).$(LANG1).acx
+##	@rm $(BASENAME).$(LANG1).dixtmp1
 
 $(PREFIX1).autobil.bin: $(BASENAME).$(PREFIX1).dix
 	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
@@ -60,7 +85,7 @@ $(PREFIX1).autopgen.bin: $(BASENAME).post-$(LANG2).dix
 	lt-comp lr $(BASENAME).post-$(LANG2).dix $@
 
 $(PREFIX2).automorf.bin: $(BASENAME).$(LANG2).dix $(BASENAME).$(LANG2).acx
-#	apertium-validate-acx $(BASENAME).$(LANG2).acx
+	apertium-validate-acx $(BASENAME).$(LANG2).acx
 	apertium-validate-dictionary $(BASENAME).$(LANG2).dix
 	lt-comp lr $(BASENAME).$(LANG2).dix $@ $(BASENAME).$(LANG2).acx
 #	@rm $(BASENAME).$(LANG2).dix
@@ -72,13 +97,21 @@ $(PREFIX2).autobil.bin: $(BASENAME).$(PREFIX1).dix
 	lt-comp rl tmp$(PREFIX2).autobil.dix $@
 	rm tmp$(PREFIX2).autobil.dix
 
-$(PREFIX2).autogen.bin: $(BASENAME).$(LANG1).metadix
-	@xsltproc buscaPar.xsl apertium-en-it.en.metadix | uniq > tmp2gen.xsl 	 
-	@xsltproc tmp2gen.xsl apertium-en-it.en.metadix >$(BASENAME).$(LANG1).dixtmp2
-	@rm tmp2gen.xsl
-	apertium-validate-dictionary $(BASENAME).$(LANG1).dixtmp2
-	lt-comp rl $(BASENAME).$(LANG1).dixtmp2 $@
-	@rm $(BASENAME).$(LANG1).dixtmp2
+$(PREFIX2).autogen.bin: .deps/$(LANG1).dix
+	apertium-validate-dictionary .deps/$(LANG1).dix
+	lt-comp rl .deps/$(LANG1).dix $@
+
+$(PREFIX2b).autogen.bin: .deps/$(LANG1b).dix
+	apertium-validate-dictionary .deps/$(LANG1b).dix
+	lt-comp rl .deps/$(LANG1b).dix $@
+
+#$(PREFIX2).autogen.bin: $(BASENAME).$(LANG1).metadix
+#	@xsltproc buscaPar.xsl apertium-en-es.en.metadix | uniq > tmp2gen.xsl 	 
+#	@xsltproc tmp2gen.xsl apertium-en-es.en.metadix >$(BASENAME).$(LANG1).dixtmp2
+#	@rm tmp2gen.xsl
+#	apertium-validate-dictionary $(BASENAME).$(LANG1).dixtmp2
+#	lt-comp rl $(BASENAME).$(LANG1).dixtmp2 $@
+#	@rm $(BASENAME).$(LANG1).dixtmp2
 #	@rm $(BASENAME).$(LANG1).metadix
 #	@rm $(BASENAME).$(LANG2).dix	
 #	@rm $(BASENAME).$(LANG1)-$(LANG2).dix	
@@ -116,7 +149,7 @@ EXTRA_DIST=$(BASENAME).post-$(LANG1).dix $(BASENAME).post-$(LANG2).dix \
 	   $(BASENAME).$(LANG1).tsx \
 	   $(BASENAME).$(LANG2).tsx \
 	   $(PREFIX1).prob $(PREFIX2).prob \
-	   buscaPar.xsl principal.xsl \
+	   buscaPar.xsl principal.xsl alt.xsl \
            translate-to-default-equivalent.xsl \
 	   $(BASENAME).$(PREFIX1).t1x $(BASENAME).$(PREFIX1).t2x \
 	   $(BASENAME).$(PREFIX1).t3x $(BASENAME).$(PREFIX2).t1x \
@@ -131,22 +164,28 @@ clean-dicts:
 	rm $(BASENAME).$(LANG2).dix
 	rm $(BASENAME).$(PREFIX1).dix
 
-apertium_en_es_DATA=$(PREFIX1).automorf.bin $(PREFIX2).automorf.bin \
+apertium_en_it_DATA=$(PREFIX1).automorf.bin $(PREFIX2).automorf.bin \
 		    $(PREFIX1).autobil.bin $(PREFIX2).autobil.bin \
 		    $(PREFIX1).autogen.bin $(PREFIX2).autogen.bin \
 		    $(PREFIX1).autopgen.bin $(PREFIX2).autopgen.bin \
+                    $(PREFIX2b).autogen.bin \
 		    $(PREFIX1).prob $(PREFIX2).prob \
 		    $(PREFIX1).t1x.bin $(PREFIX1).t2x.bin $(PREFIX1).t3x.bin \
 		    $(PREFIX2).t1x.bin $(PREFIX2).t2x.bin $(PREFIX2).t3x.bin \
-		    $(PREFIX1).mode $(PREFIX2).mode 
+		    $(PREFIX1).mode $(PREFIX2).mode \
+		    $(BASENAME).$(LANG1)-lextor.dix $(BASENAME).$(LANG2)-lextor.dix \
+		    $(BASENAME).$(PREFIX1)-lextor.dix $(BASENAME).$(PREFIX2)-lextor.dix
 
-apertium_en_esdir=$(prefix)/share/apertium/apertium-$(PREFIX1)/
+apertium_en_itdir=$(prefix)/share/apertium/apertium-$(PREFIX1)/
 apertium_en_modesdir=$(prefix)/share/apertium/modes/
 
 $(PREFIX1).mode: modes.xml
 	apertium-gen-modes modes.xml
 
 $(PREFIX2).mode: modes.xml
+	apertium-gen-modes modes.xml
+
+$(PREFIX2b).mode: modes.xml
 	apertium-gen-modes modes.xml
 
 modes: modes.xml
@@ -156,6 +195,7 @@ install-data-local:
 	apertium-gen-modes modes.xml apertium-$(PREFIX1)
 	$(INSTALL_DATA) $(PREFIX1).mode $(apertium_en_modesdir)
 	$(INSTALL_DATA) $(PREFIX2).mode $(apertium_en_modesdir)
+	$(INSTALL_DATA) $(PREFIX2b).mode $(apertium_en_modesdir)
 	$(INSTALL_DATA) $(BASENAME).$(PREFIX1).t1x $(BASENAME).$(PREFIX1).t2x $(apertium_en_esdir)
 	$(INSTALL_DATA) $(BASENAME).$(PREFIX1).t3x $(BASENAME).$(PREFIX2).t1x $(apertium_en_esdir)
 	$(INSTALL_DATA) $(BASENAME).$(PREFIX2).t2x $(BASENAME).$(PREFIX2).t3x $(apertium_en_esdir)
