testvoc script - early days yet, but I'd like to get what I have consistent (and get a list of missing words :)

--- a/.gitattributes
+++ b/.gitattributes
@@ -32,4 +32,5 @@ dev/patterns-not-detected.xml -text
 /it-en.prob -text svneol=unset#unset
 /modes.xml -text
 /principal.xsl -text
+/testvoc-en-it -text
 /translate-to-default-equivalent.xsl -text
