--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,7 @@
 dev/cross-model-en-es-it.xml -text
 dev/cross.xml -text
 dev/errors-it-en.superficial -text
+dev/missing-verbs-bidix -text
 dev/patterns-not-detected.xml -text
 /en-it-unsupervised.make -text
 /en-it.prob -text svneol=unset#unset
