--- a/.gitattributes
+++ b/.gitattributes
@@ -26,11 +26,13 @@
 /configure.ac -text
 dev/cross-model-en-es-it.xml -text
 dev/cross.xml -text
+dev/errors-en-it.superficial -text
 dev/errors-it-en.superficial -text
 dev/missing-verbs-bidix -text
 dev/patterns-not-detected.xml -text
 /en-it-unsupervised.make -text
 /en-it.prob -text svneol=unset#unset
+/errors-en-it -text
 /it-en.prob -text svneol=unset#unset
 /modes.xml -text
 /principal.xsl -text
