--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@
 /autogen.sh -text
 /buscaPar.xsl -text
 /configure.ac -text
+dev/cross-analysed.sh -text
 dev/cross-model-en-es-it.xml -text
 dev/cross.xml -text
 dev/errors-en-it.superficial -text
