--- a/.gitattributes
+++ b/.gitattributes
@@ -31,6 +31,7 @@ dev/errors-en-it.superficial -text
 dev/errors-it-en.superficial -text
 dev/missing-verbs-bidix -text
 dev/patterns-not-detected.xml -text
+dev/verbs-to-add -text
 /en-it-unsupervised.make -text
 /en-it.prob -text svneol=unset#unset
 /it-en.prob -text svneol=unset#unset
