another verb list... little more successful this tme (~200 verbs added, no guarantees about quality :)

--- a/.gitattributes
+++ b/.gitattributes
@@ -39,3 +39,4 @@ dev/verbs-to-add -text
 /principal.xsl -text
 /testvoc-en-it -text
 /translate-to-default-equivalent.xsl -text
+/verblist.txt -text
