--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,7 @@ dev/cross.xml -text
 dev/missing-verbs-bidix -text
 dev/patterns-not-detected.xml -text
 dev/verbs-to-add -text
+dev/warn-duplicate-lemma.pl -text
 /en-it-unsupervised.make -text
 /en-it.prob -text svneol=unset#unset
 /it-en.prob -text svneol=unset#unset
