--- a/.gitattributes
+++ b/.gitattributes
@@ -38,6 +38,7 @@ dev/wikinouns -text
 it-tagger-data/it.tagged -text
 it-tagger-data/it.tagged.txt -text
 /missing-adjectives -text
+/missing-adverbs -text
 /missing-nouns -text
 /modes.xml -text
 /principal.xsl -text
