--- a/.gitattributes
+++ b/.gitattributes
@@ -28,6 +28,7 @@ dev/apertium2.xml -text
 dev/cross-analysed.sh -text
 dev/cross-model-en-es-it.xml -text
 dev/cross.xml -text
+dev/find-the-cognates_adj-en-es-it -text
 dev/missing-verbs-bidix -text
 dev/patterns-not-detected.xml -text
 dev/verbs-to-add -text
