--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,7 @@ dev/find-the-cognates_adj-en-es-it -text
 dev/find-the-cognates_adj-en-es-it2 -text
 dev/missing-verbs-bidix -text
 dev/patterns-not-detected.xml -text
+dev/todo-com-edited -text
 dev/verbs-to-add -text
 dev/warn-duplicate-lemma.pl -text
 dev/wikinouns -text
