update other lists; correct enclitic pronoun in postchunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -44,6 +44,7 @@ it-tagger-data/it.tagged.txt -text
 /missing-adjectives -text
 /missing-adverbs -text
 /missing-nouns -text
+/missing-verbs -text
 /modes.xml -text
 /principal.xsl -text
 /testvoc-en-it -text
