eng-ita is en-it monolingualised; keeping the old one around since eng dixen need merging
seems to work fairly well though

--- a/configure.ac
+++ b/configure.ac
@@ -10,9 +10,11 @@ AC_PROG_LN_S
 AC_PROG_AWK
 AC_CONFIG_HEADER([config])
 
+AC_PATH_PROG([LEXTOR], [apertium-gen-lextormono], [false], [$PATH$PATH_SEPARATOR$with_lextor/bin])
+AS_IF([test x$LEXTOR = xfalse], [AC_MSG_ERROR([You don't have lextor installed. You can either install the old version 3.2 of apertium, or try apertium-eng-ita which "works" with new versions of apertium.])])
+
 m4_define([required_apertium_version], [3.2.0])
 PKG_CHECK_MODULES(APERTIUM,   apertium >= required_apertium_version, [], [PKG_CHECK_MODULES(APERTIUM,   apertium-3.2 >= required_apertium_version)])
-                          
 
 if test $APERTIUM_VER = 10;
 then MODES="";
